# switchblade-reborn

./: .gitignore  BUILD_SPEC.md  CHANGELOG.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  PROTOCOL.md  README.md  RESEARCH.md  pyproject.toml  requirements.txt  switchblade-winusb.inf
.github/workflows/: ci.yml  release.yml
app/: __init__.py  actions.py  auto_switch.py  brightness.py  cli.py  daemon.py  desktop.py  input_listener.py  paths.py  profiles.py  protocol.py  renderer.py  sdk_backend.py  usb_link.py  widgets.py
app/webui/: app.py
app/webui/templates/: index.html
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DRIVER_SETUP.md  PROTOCOL.md  TROUBLESHOOTING.md
installer/: SwitchbladeReborn.iss
packaging/: SwitchbladeReborn.spec  entrypoint.py
profiles/: profiles.json
scripts/: build.ps1
skills/switchblade-hardware/: SKILL.md
skills/switchblade-hardware/agents/: openai.yaml
skills/switchblade-hardware/references/: handoff.md
tests/: test_actions.py  test_adb_photo.py  test_analyze_capture.py  test_auto_switch.py  test_brightness.py  test_capture_usbpcap.py  test_daemon.py  test_enumerate.py  test_input_listener.py  test_listen_hid.py  test_paths.py  test_profiles.py  test_protocol.py  test_renderer.py  test_sdk_backend.py  test_sdk_exerciser.py  test_trace_rzappmanager.py  test_usb_link.py  test_webui.py  test_widgets.py
tools/: adb_photo.py  analyze_capture.py  blit_test.py  capture_sdk_reference.ps1  capture_usbpcap.py  enumerate.py  listen_hid.py  listen_keys.py  sdk_exerciser.py  trace_rzappmanager.py
