[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_LegacyBackend"

[project]
name = "switchblade-reborn"
version = "1.0.0"
description = "Standalone Windows control app for the Razer DeathStalker Ultimate Switchblade UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mironoprea" }]
keywords = ["razer", "deathstalker", "switchblade", "lcd", "usb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

dependencies = [
    "pyusb>=1.2.1",
    "libusb-package>=1.0.26",
    "Pillow>=10.0.0",
    "hidapi>=0.14.0",
    "flask>=3.0.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "pywin32>=306;platform_system=='Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
switchblade = "app.cli:main"

[tool.setuptools]
packages = ["app", "app.webui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
